# D4BE-01-blog

./: .gitignore  .isort.cfg  .pylintrc  .tool-versions  Makefile  README.md  pylintrc  pyproject.toml
mysite/: .tool-versions
mysite/blog/: admin.py  forms.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_title.py  0003_comment_comment_blog_commen_created_0e6ed4_idx.py
mysite/blog/templates/: pagination.html
mysite/blog/templates/blog/post/: comment.html  detail.html  share.html
mysite/mysite/: settings.py
